--- a/common/src/test/resources/html-templates/order_details.html
+++ b/common/src/test/resources/html-templates/order_details.html
@@ -11,10 +11,10 @@
             display: block;
             width: 100%;
             height: 100%;
-            transform: rotate(45deg);
             z-index: 1000;
             left: 0;
             top: 0;
+            opacity: 0.5;
         }
         .page-footer {
             position: fixed;
